# QA-FRAMEWORK

./: .gitignore  .infisical.json  AUTONOMOUS_SESSION_REPORT_2026-03-05.md  AUTONOMOUS_WORK_REPORT_2026-03-05.md  CODE_REFACTORING_REPORT.md  COMPETITIVE_ANALYSIS_2026.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  ENHANCEMENT_TASKS.md  ENV_VALIDATION_REPORT_20260301_230534.md  EXECUTIVE_SUMMARY.md  FRONTEND_CRITICAL_ISSUES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FRONTEND_TASKS.md  MASTER_TASK_BOARD.md  MONITORING_SETUP.md  NIGHTLY_REPORT_2026-02-27.md  NIGHTLY_REPORT_2026-02-27_2330.md  NIGHTLY_REPORT_2026-02-28.md  NIGHTLY_REPORT_2026-03-06_AUTONOMOUS.md  OPENCODE_MODELS_GUIDE.md  OPENCODE_USAGE_GUIDE.md  PENDING_TASKS.md  PENDING_TASKS_SESSION_2026-03-04.md  PERFORMANCE_GUIDE.md  PROJECT_STUDY.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_WINS_TODAY.md  RAILWAY_SETUP.md  README.md  README_FRAMEWORK_OLD.md  REAL_STATUS_REPORT.md  SESSION-STATE-new.md  SESSION-STATE.md  SESSION_REPORT_2026-03-04.md  SPRINT_3.5_COMPLETION_REPORT.md  SUBAGENTS_STATUS.md  TAREAS_SUBAGENTES_2026-03-05.md  TASK_LIST.md  (+17 more)
.github/workflows/: ci-cd.yml  deploy-railway.yml  e2e.yml  nightly.yml  pr-checks.yml
archive/: ALFRED_STATUS_REPORT.md  DEPLOYMENT.md  ENHANCEMENT_TASKS.md  FINAL_DELIVERY_REPORT.md  FINAL_STATUS_REPORT.md  FRONTEND_FIX_PLAN.md  IMPROVEMENTS_SUMMARY.md  MERGE_REPORT.md  REPORT_FINAL_2026-03-03.md  STATUS_FINAL.md
archive/reports/: NIGHTLY_PROGRESS_REPORT_2026-03-05.md  NIGHTLY_REPORT_2026-02-26.md  NIGHTLY_REPORT_2026-03-03.md  NIGHTLY_REPORT_2026-03-05_AUTONOMOUS_FRONTEND.md  NIGHTLY_REPORT_2026-03-06_AUTONOMOUS.md  NIGHTLY_REPORT_2026-03-09.md  NIGHT_MODE_PROGRESS_2026-03-10.md
config/: alertmanager.yml  prometheus.prod.yml  qa.development.yaml  qa.staging.yaml  qa.yaml
config/alerts/: rules.yml
dashboard/: .env.example  .gitignore  AUTONOMOUS_WORK_PLAN.md  CHANGELOG.md  CI_CD_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_TRIGGER.md  FORCE_REDEPLOY.md  GITHUB_COMMITS_PLAN.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  INTEGRATION_HUB_SUMMARY.md  JIRA_ALM_INTEGRATION_STUDY.md  NIGHTLY_SUMMARY.md  PROGRESS_STATUS.md  PROJECT_SUMMARY.md  README.md  ROADMAP_CYPRESS_CLOUD.md  docker-compose.railway.yml  docker-compose.yml  package-lock.json  package.json  setup.sh  test_integration_hub.py  validate_performance_setup.py
dashboard/backend/: .dockerignore  .env.example  ANALYTICS_INVESTIGATION.md  CACHING.md  COVERAGE_REPORT.md  CRON_JOBS_SUMMARY.md  Dockerfile  Dockerfile.prod  LOGGING.md  NIGHTLY_PROGRESS_REPORT.md  OPENCODE_PROMPT.txt  REMAINING_TESTS_FIX.md  SEARCH_API_IMPLEMENTATION.md  TEST_COVERAGE_REPORT.md  TEST_FIX_PROMPT.md  __init__.py  alembic.ini  config.py  coverage.json  database.py  fix_pytest.sh  main.py  pytest.ini  recreate_venv.sh  requirements.txt  test_search_schemas.py
dashboard/docs/: api-examples.md  api-guide.md  architecture.md
dashboard/examples/: integration_example.py
dashboard/frontend/: .eslintrc.json  Dockerfile  Dockerfile.prod  FRONTEND_REVIEW.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
dashboard/monitoring/: README.md  prometheus.yml
dashboard/tests/: integration_tests.py  test_dummy.py
docs/: ADVANCED_TEST_ARCHITECTURE.md  AI_ASSISTANT_API.md  ALLURE_SETUP.md  API_REFERENCE.md  AUTH.md  BETA_EMAIL_TEMPLATES.md  BLOG_POST_DRAFT.md  CICD_PIPELINE.md  DATABASE_TESTING.md  DEMO_VIDEO_SCRIPT.md  GLOBAL_SEARCH_API.md  INVESTOR_PITCH_DECK.md  NOTIFICATION_API.md  OPENCODE_BEST_PRACTICES.md  OPENCODE_FULL_PROMPT.md  OPENCORE_OFFICIAL_GUIDE.md  OPENCORE_RESOLUTION.md  PARALLELIZATION_GUIDE.md  PERFORMANCE_TESTING.md  RAILWAY_DEPLOY_DIAGNOSTIC.md  RAILWAY_ENV_VARS.md  RAILWAY_STATUS_FINAL.md  SECURITY_TESTING.md  SOCIAL_MEDIA_POSTS.md  SPRINT_3.4_3.5_PLAN.md  STRIPE_WEBHOOKS_SETUP.md  TUTORIAL_VIDEOS_SCRIPTS.md  WEBSOCKET_GUIDE.md  api.md  architecture.md  beta-prep-summary.md  beta-readiness-report.md  contributing.md  getting-started.md  index.md
docs/deployment/: CLOUD_PROVIDER_COMPARISON.md  MIGRATION.md  PRE_DEPLOY_CHECKLIST.md  README.md  (+3 more)
examples/: ALLURE_REPORTING_EXAMPLES.md  allure_reporting_example.py  api_testing_example.py  database_testing_example.py  graceful_shutdown_examples.py  performance_testing_example.py  security_testing_example.py  ui_testing_example.py
reports/: E2E_NAVIGATION_REPORT.md
scripts/: auto_setup.sh  auto_setup_after_config.sh  backup.sh  deploy.sh  health_monitor.sh  migrate_data.py  pre-deploy-check.sh  regression_test.sh  security-test.sh  security_scan.sh  setup-railway.sh  setup.sh  validate_and_report.sh  validate_config.py  validate_dependencies.py  validate_environment.py
src/: __init__.py
tests/: conftest.py
(+458 files in other folders)
