[project]
name = "qa-framework"
version = "1.0.0"
description = "Modern QA Automation Framework with Clean Architecture and SOLID Principles"
authors = [{name = "Alfred", email = "alfred@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
keywords = ["qa", "testing", "automation", "framework", "pytest"]

dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "playwright>=1.41.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "allure-pytest>=2.13.0",
    "faker>=23.0.0",
]

[project.optional-dependencies]
dev = ["black>=24.1.0", "ruff>=0.2.0", "mypy>=1.8.0", "pre-commit>=3.6.0"]
ui = ["selenium>=4.16.0"]
performance = ["locust>=2.22.0"]
security = ["bandit>=1.7.0", "safety>=3.0.0"]

[project.scripts]
qa-framework = "src.core.cli:main"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "api: marks tests as API tests",
    "ui: marks tests as UI tests",
    "parallel_safe: marks tests as safe for parallel execution",
    "serial: marks tests to run serially (not in parallel)",
    "isolated: marks tests that require complete isolation",
    "database: marks tests as requiring database",
    "redis: marks tests as requiring Redis",
    "websocket: marks tests as requiring WebSocket",
    "concurrent: marks tests as testing concurrent operations",
    "framework: marks tests as framework-related",
    "dashboard: marks tests as dashboard-related",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
