[tool.poetry]
name = "qa-framework"
version = "1.0.0"
description = "Modern QA Automation Framework with Clean Architecture"
authors = ["Joker <joker@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-xdist = "3.5.0"
pytest-cov = "4.1.0"
allure-pytest = "2.13.5"
pytest-html = "4.1.1"
httpx = "0.26.0"
requests = "2.31.0"
playwright = "1.41.0"
selenium = "4.16.0"
faker = "23.2.0"
factory-boy = "3.3.0"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
pyyaml = "6.0.1"
python-dotenv = "1.0.0"
pydantic-extra-types = "2.6.0"
locust = "2.22.0"
bandit = "1.7.6"
safety = ">=3.0.0"
sqlalchemy = "^2.0"
asyncpg = "0.29.0"
aiomysql = "0.2.0"
aiosqlite = "0.19.0"
redis = "5.0.1"
psutil = "5.9.8"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
ruff = "0.2.1"
mypy = "1.8.0"
pre-commit = "3.6.0"
isort = "5.13.2"
types-PyYAML = "6.0.12.12"
types-requests = "2.31.0.20240106"
types-urllib3 = "1.26.25.14"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "security: Security tests",
]
